Added loaders as a config option. MOVED TO MOD GUI - WAY NICER!

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -54,7 +54,7 @@ oarc-spawn-ctrl=Spawn Ctrl
 oarc-spawn-controls=Spawn Controls:
 oarc-spawn-allow-joiners=Allow others to join your base.
 
-oarc-set-respawn-loc=Set New Respawn Location (1 hour cooldown)
+oarc-set-respawn-loc=Set New Respawn Location (has a cooldown)
 oarc-set-respawn-loc-cooldown=Set Respawn Cooldown Remaining: __1__
 oarc-set-respawn-note=This will set your respawn point to your current location.
 
