--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -37,7 +37,7 @@ oarc-player-is-joining-main-force=__1__ tritt dem Standardteam bei!
 oarc-player-is-joining-near=__1__ nimmt aus der Ferne am Spiel teil!
 oarc-player-is-joining-far=__1__ nimmt aus großer Entfernung am Spiel teil!
 
-oarc-please-wait=BITTE WARTE, BIS DEIN SPAWN-PUNKT GENERIERT IST!
+oarc-please-wait=BITTE WARTE, BIS DEIN SPAWN-PUNKT GENERIERT WURDE!
 
 oarc-looking-for-buddy=__1__ sucht nach einem Buddy.
 
@@ -111,3 +111,12 @@ oarc-buddy-declined=__1__ hat deine Buddy-Anfrage abgelehnt!
 
 oarc-spawn-wait=Bitte warte!
 oarc-wait-text=Dein Spawn wird gerade erstellt. Du wirst in __1__ Sekunden dorthin teleportiert!\nHalte dich bereit...
+
+
+
+
+
+
+
+
+
