fix zh-CN locale latest

--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -35,7 +35,7 @@ oarc-buddy-spawn=和好友一起出生
 oarc-buddy-spawn-info=好友系统需要两个玩家同时在这个菜单中，你可以在对方旁边出生，每个玩家都有自己的资源。
 
 oarc-max-players-shared-spawn=如果创建自己的生成点，则最多可以允许__1__个其他在线玩家加入。
-oarc-spawn-dist-notes=近点出生在距离地图中心__1 __-__ 2__块之间。\ n远点出生在距离地图中心__3 __-__ 4__块之间。\ n单独生成很危险！除非有其它玩家愿意帮助你。
+oarc-spawn-dist-notes=近点出生在距离地图中心__1__-__2__块之间。\n远点出生在距离地图中心__3__-__4__块之间。\n单独生成很危险！除非有其它玩家愿意帮助你。
 
 oarc-player-is-joining-main-force=__ 1__正在加入主要团队！
 oarc-player-is-joining-near=__1__ 从远处加入了游戏！
@@ -43,7 +43,7 @@ oarc-player-is-joining-far=___1__ 从很远的地方加入游戏！
 
 oarc-please-wait=请等待 你的出生点正在生成！
 
-oarc-looking-for-buddy=__ 1__正在寻找好友。
+oarc-looking-for-buddy=__1__正在寻找队友。
 
 oarc-avail-bases-join=可加入的团队:
 oarc-spawn-spots-remaining=__1__ (__2__ 空位)
@@ -64,8 +64,8 @@ oarc-set-respawn-note=这会将重生点设置为当前位置。
 
 oarc-select-player-join-queue=从申请队列中选择一个玩家:
 
-oarc-accept=接受
-oarc-reject=拒绝
+oarc-accept=欣然接受
+oarc-reject=残忍拒绝
 
 oarc-no-player-join-reqs=您目前没有任何玩家请求加入您的队伍。
 
@@ -105,7 +105,7 @@ oarc-buddy-requesting-from-you=__1__ 正在向你请求好友生成！
 oarc-buddy-txt-main-team=默认团队
 oarc-buddy-txt-new-teams=独立团队
 oarc-buddy-txt-buddy-team=好友团队
-oarc-buddy-txt-moat=被一条护城河包围  
+oarc-buddy-txt-moat=被一条护城河包围
 oarc-buddy-txt-near=靠近地图中心！
 oarc-buddy-txt-far=远离地图中心!
 oarc-buddy-txt-would-like= 想加入
