MAJOR work to do conversion to a proper mod! Started to connect surface selection in GUI to implementation.

--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -1,8 +1,4 @@
-﻿scenario-name=Oarc多人游戏场景。
-
-description=该场景允许每个玩家在加入游戏时创建自己的生成点。这里有许多便利功能，确保新玩家可以随时加入游戏或加入其他玩家的队伍。这是一个仅限多人游戏的场景。\n[color=red][font=default-bold]首先您必须创建一个config.lua文件，如果还没有的话！[/font][/color]\n在场景文件夹内，复制"example-config.lua"并将其命名为"config.lua"。用任何文本编辑器编辑该文件。这是唯一配置场景选项的方法，必须在开始新游戏之前完成。\n[color=yellow][font=default-bold]更改配置或更新场景时，请始终开始新游戏！[/font][/color]\n请访问https://github.com/Oarcinae/FactorioScenarioMultiplayerSpawn获取场景源代码、Wiki以及提交任何错误报告。Wiki上有关于如何在专用/无头服务器上最佳开始游戏的说明。\n[color=yellow][font=default-bold]如果你是从模组门户或通过加入服务器得到这个场景的，确保在场景文件夹中删除任何blueprint.zip文件！[/font][/color]
-
-oarc-spawn-time-warning-msg=由于这个场景的运作方式，你新出生点周围的土地可能需要一些时间来生成...当你选择你的第一个生成点时，请等待10-20秒。
+﻿oarc-spawn-time-warning-msg=由于这个场景的运作方式，你新出生点周围的土地可能需要一些时间来生成...当你选择你的第一个生成点时，请等待10-20秒。
 
 oarc-i-understand=我明白了
 oarc-spawn-options=生成选项
