--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,52 +1,117 @@
-[mod-description]
-oarc-mod=TEST TEST This mod provides a scenario that overhauls multiplayer spawning.\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]
+scenario-name=OARC
 
-[mod-setting-name]
-oarc-mod-scenario-config-note=Scenario note (lease read!)
-oarc-mod-enable-main-team=Enable main team
-oarc-mod-enable-separate-teams=Enable separate teams
-oarc-mod-enable-buddy-spawn=Enable buddy spawn
-oarc-mod-enable-spawning-on-other-surfaces=Allow starting on other surfaces
-oarc-mod-enable-regrowth=Regrowth (map cleanup)
-oarc-mod-enable-offline-protection=Offline protection
-oarc-mod-enable-shared-team-vision=Shared team vision
-oarc-mod-enable-shared-team-chat=Shared team chat
-oarc-mod-enable-shared-spawns=Shared spawns
-oarc-mod-number-of-players-per-shared-spawn=Number of players per shared spawn
-oarc-mod-enable-abandoned-base-cleanup=Cleanup abandoned bases
-oarc-mod-enable-friendly-fire=Enable friendly fire
-oarc-mod-enable-allow-moats-around-spawns=Allow moats around spawns
-oarc-mod-enable-force-bridges-next-to-moats=Moat bridges
-oarc-mod-minimum-distance-to-existing-chunks=Minimum distance to existing chunks
-oarc-mod-near-spawn-min-distance=Near spawn minimum distance
-oarc-mod-near-spawn-max-distance=Near spawn maximum distance
-oarc-mod-far-spawn-min-distance=Far spawn minimum distance
-oarc-mod-far-spawn-max-distance=Far spawn maximum distance
+description=This mod provides a scenario that overhauls multiplayer spawning.\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]
 
-[mod-setting-description]
-oarc-mod-scenario-config-note=[color=red]This is not an actual mod setting![/color]\n It is just a note regarding further customization available:\n Additional settings can be found in the scenario config file. See config.lua for more info. The scenario can be directly run without the mod to allow for further customization. Please see the mod portal or github page for more information and contact info.
-oarc-mod-enable-main-team=Allow players to join a "main team" with all other players.\n[font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
-oarc-mod-enable-separate-teams=Allow players to start their own teams (CO-OP only, No PVP).\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
-oarc-mod-enable-buddy-spawn=Allow spawning with a buddy. 2 players can spawn next to each other with their own starting areas.
-oarc-mod-enable-spawning-on-other-surfaces=Allow spawning on other surfaces.
-oarc-mod-enable-regrowth=Enables regrowth. This slowly removes inactive chunks over time. Any chunk with player structures will not be removed. This helps to keep the map (and file size) smaller over time.
-oarc-mod-enable-offline-protection=This inhibits enemy attacks on bases where all players are offline. Not 100% guaranteed!
-oarc-mod-enable-shared-team-vision=Makes sure all teams can see each other's map and radar coverage.
-oarc-mod-enable-shared-team-chat=All teams can see each other's chat messages.
-oarc-mod-enable-shared-spawns=Allow players to share their spawn areas for other players to join.
-oarc-mod-number-of-players-per-shared-spawn=Number of players that can join a shared spawn, including the original player.
-oarc-mod-enable-abandoned-base-cleanup=Abandoned bases will be cleaned up if players leave within a short time of joining.
-oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chests (or run over your friends with a train).
-oarc-mod-enable-allow-moats-around-spawns=Allow players to choose spawns with a moat around them.
-oarc-mod-enable-force-bridges-next-to-moats=If spawn is surrounded by land, the moat will have a small land bridge connecting it.
-oarc-mod-minimum-distance-to-existing-chunks=This is the minimum distance a new spawn will be created from existing chunks (even if not visible).
-oarc-mod-near-spawn-min-distance=The minimum distance to start looking for a new "near" spawn location. Near and far are relative to the center of the map.
-oarc-mod-near-spawn-max-distance=The maximum distance to start looking for a new "near" spawn location. Near and far are relative to the center of the map.
-oarc-mod-far-spawn-min-distance=The minimum distance to start looking for a new "far" spawn location. Near and far are relative to the center of the map.
-oarc-mod-far-spawn-max-distance=The maximum distance to start looking for a new "far" spawn location. Near and far are relative to the center of the map.
+oarc-spawn-time-warning-msg=Due to the way this scenario works, it may take some time for the land around your new spawn area to generate... Please wait for 10-20 seconds when you select your first spawn.
 
-[string-mod-setting]
-oarc-mod-scenario-config-note-message-info=<-- Hover for tooltip message!
+oarc-i-understand=I Understand
+oarc-spawn-options=Spawn Options
 
-[string-mod-setting-description]
-oarc-mod-scenario-config-note-message-info=Additional settings can be found in the scenario config file. See config.lua for more info. The scenario can be directly run without the mod to allow for further customization. Please see the mod portal or github page for more information and contact info.
+oarc-click-info-btn-help=Click the INFO button in the top left to learn more about this scenario! This is your ONLY chance to choose a spawn option. Choose carefully...
+
+oarc-vanilla-spawn=Vanilla Spawn
+oarc-default-spawn-behavior=This is the default spawn behavior of a vanilla game. You join the default team in the center of the map.
+
+oarc-join-main-team-radio=Join Main Team (shared research)
+oarc-create-own-team-radio=Create Your Own Team (own research tree)
+
+oarc-moat-option=Surround your spawn with a moat
+
+oarc-solo-spawn-near=Solo Spawn (Near)
+oarc-solo-spawn-far=Solo Spawn (Far)
+
+oarc-starting-area-vanilla=You are spawned in your own starting area (vanilla style).
+oarc-vanilla-spawns-available=There are __1__ vanilla spawns available.
+
+oarc-starting-area-normal=You are spawned in a new area, with pre-set starting resources.
+oarc-join-someone-avail=Join Someone (__1__ available)
+oarc-join-someone-info=You are spawned in someone else's base. This requires at least 1 person to have allowed access to their base. This choice is final and you will not be able to create your own spawn later.
+
+oarc-no-shared-avail=There are currently no shared bases availble to spawn at.
+oarc-join-check-again=Check Again
+oarc-shared-spawn-disabled=Shared spawns are disabled in this mode.
+
+oarc-buddy-spawn=Buddy Spawn
+oarc-buddy-spawn-info=The buddy system requires 2 players in this menu at the same time, you spawn beside each other, each with your own resources.
+
+oarc-max-players-shared-spawn=If you create your own spawn point you can allow up to __1__ other online players to join.
+oarc-spawn-dist-notes=Near spawn is between __1__-__2__ chunks away from the center of the map.\nFar spawn is between __3__-__4__ chunks away from the center of the map.\nSolo spawns are dangerous! Expect a fight to reach other players.
+
+oarc-player-is-joining-main-force=__1__ is joining the main force!
+oarc-player-is-joining-near=__1__ is joining the game from a distance!
+oarc-player-is-joining-far=__1__ is joining the game from a great distance!
+
+oarc-please-wait=PLEASE WAIT WHILE YOUR SPAWN POINT IS GENERATED!
+
+oarc-looking-for-buddy=__1__ is looking for a buddy.
+
+oarc-avail-bases-join=Available Bases to Join:
+oarc-spawn-spots-remaining=__1__ (__2__ spots remaining)
+oarc-cancel-return-to-previous=Cancel (Return to Previous Options)
+oarc-player-requesting-join-you=__1__ is requesting to join your base!
+oarc-waiting-for-spawn-owner=Waiting for spawn owner to respond...
+
+oarc-you-will-spawn-once-host=You will spawn once the host selects yes...
+oarc-player-cancel-join-request=__1__ cancelled their request to join your spawn.
+
+oarc-spawn-ctrl=Spawn Ctrl
+oarc-spawn-controls=Spawn Controls:
+oarc-spawn-allow-joiners=Allow others to join your base.
+
+oarc-set-respawn-loc=Set New Respawn Location (has a cooldown)
+oarc-set-respawn-loc-cooldown=Set Respawn Cooldown Remaining: __1__
+oarc-set-respawn-note=This will set your respawn point to your current location.
+
+oarc-select-player-join-queue=Select a player from the join queue:
+
+oarc-accept=Accept
+oarc-reject=Reject
+
+oarc-no-player-join-reqs=You have no players requesting to join you at this time.
+
+oarc-start-shared-base=New players can now join __1__'s base!
+oarc-stop-shared-base=New players can no longer join __1__'s base!
+
+oarc-spawn-point-updated=Re-spawn point updated!
+oarc-selected-player-not-wait=Selected player is no longer waiting to join!
+oarc-reject-joiner=You rejected __1__'s request to join your base.
+oarc-your-request-rejected=Your request to join was rejected.
+
+oarc-player-joining-base=__1__ is joining __2__'s base!
+
+oarc-player-left-while-joining=__1__ left the game. What an ass.
+
+oarc-buddy-spawn-options=Buddy Spawn Options
+oarc-buddy-spawn-instructions=To use this, make sure you and your buddy are in this menu at the same time. Only one of you must send the request. Select your buddy from the list (refresh if your buddy's name is not visible) and select your spawn options. Click one of the request buttons to send the request. The other buddy can then accept (or deny) the request. This will allow you both to spawn next to each other, each with your own spawn area. Once a buddy accepts a spawn request, it is final!
+
+oarc-buddy-select-info=First, select a buddy from the waiting list. Then choose the spawn options and send your request:
+
+oarc-buddy-refresh=Refresh Buddy List
+oarc-create-buddy-team=Create Your Own Buddy Team (buddy and you share research)
+
+oarc-buddy-spawn-near=Request Buddy Spawn (Near)
+oarc-buddy-spawn-far=Request Buddy Spawn (Far)
+
+oarc-invalid-buddy=You have not selected a valid buddy! Please try again.
+oarc-buddy-not-avail=Selected buddy is no longer available! Please try again.
+
+oarc-waiting-for-buddy=Waiting for buddy to respond...
+oarc-wait-buddy-select-yes=You will spawn once your buddy selects yes...
+
+oarc-buddy-cancel-request=__1__ cancelled their buddy request!
+
+oarc-buddy-requesting-from-you=__1__ is requesting a buddy spawn from you!
+
+oarc-buddy-txt-main-team=the main team
+oarc-buddy-txt-new-teams=on separate teams
+oarc-buddy-txt-buddy-team=a buddy team
+oarc-buddy-txt-moat= surrounded by a moat 
+oarc-buddy-txt-near=near to the center of the map!
+oarc-buddy-txt-far=far from the center of the map!
+oarc-buddy-txt-would-like= would like to join 
+oarc-buddy-txt-next-to-you= next to you
+
+oarc-buddy-declined=__1__ declined your buddy request!
+
+oarc-spawn-wait=Please wait!
+oarc-wait-text=Your spawn is being created now.\nYou will be teleported there in __1__ seconds!\nPlease standby...
