Better spawn preview logic. Slowly working on exposing all mod settings in the custom in-game GUI tabs.

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -63,6 +63,13 @@ oarc-mod-enable-shared-spawns=Allow players to share their spawn areas for other
 oarc-mod-number-of-players-per-shared-spawn=Number of players that can join a shared spawn, including the original player.
 oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chests (or run over your friends with a train).
 
+oarc-mod-main-force-name=The name of the main force. This is the default team that is created when the game starts.
+oarc-mod-default-surface=The default surface that players will spawn on if they join the main team or if spawning on other surfaces is not enabled.
+oarc-mod-scale-resources-around-spawns=This scales resources around every spawn area so far away spawns aren't immediately next to very rich deposits.
+oarc-mod-modified-enemy-spawning=This scales the enemy spawning around every spawn area so far away spawns aren't next to very dangerous enemies.
+oarc-mod-minimum-online-time=The minimum time a player must be online before they leave, otherwise their spawn area will be cleaned up.
+oarc-mod-respawn-cooldown-min=The minimum time a player must wait before they can change their spawn point to a new location.
+
 oarc-mod-enable-regrowth=Enables regrowth. This slowly removes inactive chunks over time. Any chunk with player structures will not be removed. This helps to keep the map (and file size) smaller over time.
 oarc-mod-enable-world-eater=Enables world eater. This is requires and is part of regrowth. This slowly checks all chunks for a lack of player structures and entities and marks them for removal. This helps to keep the map (and file size) smaller over time. This is more of an experimental feature, use at your own risk.
 oarc-mod-enable-abandoned-base-cleanup=Abandoned bases will be cleaned up if players leave within a short time of joining.
