--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -115,3 +115,6 @@ oarc-buddy-declined=__1__ declined your buddy request!
 
 oarc-spawn-wait=Please wait!
 oarc-wait-text=Your spawn is being created now.\nYou will be teleported there in __1__ seconds!\nPlease standby...
+
+oarc-settings-tab-title=Settings
+oarc-settings-tab-admin-warning=You are an admin. You may change any of these settings. BE CAREFUL!
