Working on distance selection slider to replace near/far buttons.

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -13,10 +13,8 @@ oarc-mod-enable-spawning-on-other-surfaces=Allow starting on other surfaces
 oarc-mod-allow-moats-around-spawns=Allow moats around spawns
 oarc-mod-enable-moat-bridging=Moat bridges
 oarc-mod-minimum-distance-to-existing-chunks=Minimum distance to existing chunks
-oarc-mod-near-spawn-min-distance=Near spawn minimum distance
-oarc-mod-near-spawn-max-distance=Near spawn maximum distance
-oarc-mod-far-spawn-min-distance=Far spawn minimum distance
-oarc-mod-far-spawn-max-distance=Far spawn maximum distance
+oarc-mod-near-spawn-distance=Spawn minimum distance
+oarc-mod-far-spawn-distance=Spawn maximum distance
 
 oarc-mod-enable-buddy-spawn=Enable buddy spawn
 oarc-mod-enable-offline-protection=Offline protection
@@ -50,10 +48,8 @@ oarc-mod-enable-spawning-on-other-surfaces=Allow spawning on other surfaces.
 oarc-mod-allow-moats-around-spawns=Allow players to choose spawns with a moat around them.
 oarc-mod-enable-moat-bridging=If the spawn area is surrounded by land, the moat will have a small land bridge connecting it.
 oarc-mod-minimum-distance-to-existing-chunks=This is the minimum distance a new spawn will be created from existing chunks (even if not visible).
-oarc-mod-near-spawn-min-distance=The minimum distance to start looking for a new "near" spawn location. Near and far are relative to the center of the map.
-oarc-mod-near-spawn-max-distance=The maximum distance to start looking for a new "near" spawn location. Near and far are relative to the center of the map.
-oarc-mod-far-spawn-min-distance=The minimum distance to start looking for a new "far" spawn location. Near and far are relative to the center of the map.
-oarc-mod-far-spawn-max-distance=The maximum distance to start looking for a new "far" spawn location. Near and far are relative to the center of the map.
+oarc-mod-near-spawn-distance=The minimum distance a player can choose to spawn from the origin. This is used as a starting point for the search algorithm so is not a guaranteed distance.
+oarc-mod-far-spawn-distance=The maximum distance a player can choose to spawn from the origin. This is used as a starting point for the search algorithm so is not a guaranteed distance.
 
 oarc-mod-enable-buddy-spawn=Allow spawning with a buddy. 2 players can spawn next to each other with their own starting areas.
 oarc-mod-enable-offline-protection=This inhibits enemy attacks on bases where all players are offline. Not 100% guaranteed!
