--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -35,7 +35,7 @@ oarc-buddy-spawn=Buddy Spawn
 oarc-buddy-spawn-info=The buddy system requires 2 players in this menu at the same time, you spawn beside each other, each with your own resources.
 
 oarc-max-players-shared-spawn=If you create your own spawn point you can allow up to __1__ other online players to join.
-oarc-spawn-dist-notes=Near spawn is between __1__-__2__ chunks away from the center of the map.\nFar spawn is between __3__-__4__ chunks away from the center of the map.\nSolo spawns are dangerous! Expect a fight to reach other players.
+oarc-spawn-dist-notes=Spawn distance is in CHUNKS from the center of the map.\nExpect a fight to reach other players.
 
 oarc-player-is-joining-main-force=__1__ is joining the main force on __2__!
 oarc-player-is-joining-near=__1__ is joining the game from a distance on __2__!
