--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -31,7 +31,7 @@ oarc-buddy-spawn=和好友一起出生
 oarc-buddy-spawn-info=好友系统需要两个玩家同时在这个菜单中，你们将彼此并肩生成，各自拥有自己的资源。
 
 oarc-max-players-shared-spawn=如果你创建自己的出生基地，则最多可以允许多达 __1__ 名其他在线玩家加入。
-oarc-spawn-dist-notes=近距离生成距离地图中心 __1__-__2__ 块。\n远距离生成距离地图中心 __3__-__4__ 块。\n单人出生有危险！要开荒到达其他玩家的地方，请做好准备。
+# oarc-spawn-dist-notes=近距离生成距离地图中心 __1__-__2__ 块。\n远距离生成距离地图中心 __3__-__4__ 块。\n单人出生有危险！要开荒到达其他玩家的地方，请做好准备。
 
 oarc-player-is-joining-main-force=__ 1__正在加入主要团队！
 oarc-player-is-joining-near=__1__ 从远处加入了游戏！
