Saving lots of work on gui stuff and shared and buddy spawns.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,7 +2,7 @@ scenario-name=OARC
 
 description=This mod provides a scenario that overhauls multiplayer spawning.\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]
 
-oarc-spawn-time-warning-msg=Due to the way this scenario works, it may take some time for the land around your new spawn area to generate... Please wait for 10-20 seconds when you select your first spawn.
+oarc-scenario-warning-msg=This scenario allows players to create their own spawn points far from the center of the map. For more information, click the INFO button in the top left corner.
 
 oarc-i-understand=I Understand
 oarc-spawn-options=Spawn Options
@@ -17,21 +17,32 @@ oarc-create-own-team-radio=Create Your Own Team (own research tree)
 
 oarc-moat-option=Surround your spawn with a moat
 
-oarc-solo-spawn-near=Solo Spawn (Near)
-oarc-solo-spawn-far=Solo Spawn (Far)
+oarc-solo-spawn=Create Your Own Spawn
+oarc-solo-spawn-tooltip=You will spawn in your own starting area with pre-set starting resources.
 
 oarc-starting-area-vanilla=You are spawned in your own starting area (vanilla style).
 oarc-vanilla-spawns-available=There are __1__ vanilla spawns available.
 
+oarc-spawn-menu-settings-info=These settings apply when creating a new spawn. They do not have any effect if you are joining a shared spawn.
+oarc-spawn-menu-settings-header=Spawn Settings
+oarc-spawn-menu-solo-header=Create Your Own Spawn
+oarc-spawn-menu-shared-header=Join Another Spawn
+oarc-spawn-menu-buddy-header=Create A Buddy Spawn
+
+oarc-spawn-distance-slider-label=Distance From Map Center: 
+
 oarc-starting-area-normal=You are spawned in a new area, with pre-set starting resources.
 oarc-join-someone-avail=Join Someone (__1__ available)
-oarc-join-someone-info=You are spawned in someone else's base. This requires at least 1 person to have allowed access to their base. This choice is final and you will not be able to create your own spawn later.
+oarc-join-someone-info=You can join someone else's starting area. This requires at least 1 person to have allowed access to their base. This choice is final and you will not be able to create your own spawn later.
 
 oarc-no-shared-avail=There are currently no shared bases availble to spawn at.
 oarc-join-check-again=Check Again
 oarc-shared-spawn-disabled=Shared spawns are disabled in this mode.
+oarc-no-shared-spawn-selected=You have not selected a vlid player to join. Please select one from the list.
+oarc-invalid-host-shared-spawn=Selected player is no longer available! Please try again.
 
-oarc-buddy-spawn=Buddy Spawn
+oarc-buddy-spawn=Request Buddy Spawn
+oarc-buddy-spawn-disabled=Buddy spawns are disabled in this mode.
 oarc-buddy-spawn-info=The buddy system requires 2 players in this menu at the same time, you spawn beside each other, each with your own resources.
 
 oarc-max-players-shared-spawn=If you create your own spawn point you can allow up to __1__ other online players to join.
@@ -47,7 +58,8 @@ oarc-looking-for-buddy=__1__ is looking for a buddy.
 
 oarc-avail-bases-join=Available Bases to Join:
 oarc-spawn-spots-remaining=__1__ (__2__ spots remaining)
-oarc-cancel-return-to-previous=Cancel (Return to Previous Options)
+oarc-cancel-button-caption=Cancel
+oarc-return-to-previous-tooltip=Return to the previous menu.
 oarc-player-requesting-join-you=__1__ is requesting to join your base!
 oarc-waiting-for-spawn-owner=Waiting for spawn owner to respond...
 
@@ -86,6 +98,8 @@ oarc-buddy-spawn-instructions=To use this, make sure you and your buddy are in t
 
 oarc-buddy-select-info=First, select a buddy from the waiting list. Then choose the spawn options and send your request:
 
+oarc-buddy-spawn-request-header=Buddy Request!
+
 oarc-buddy-refresh=Refresh Buddy List
 oarc-create-buddy-team=Create Your Own Buddy Team (buddy and you share research)
 
@@ -102,14 +116,16 @@ oarc-buddy-cancel-request=__1__ cancelled their buddy request!
 
 oarc-buddy-requesting-from-you=__1__ is requesting a buddy spawn from you!
 
+# [BUDDY NAME] oarc-buddy-txt-would-like {team choice} oarc-buddy-txt-next-to-you {moat choice} {surface choice} {distance choice}
+oarc-buddy-txt-would-like= would like to join 
 oarc-buddy-txt-main-team=the main team
 oarc-buddy-txt-new-teams=on separate teams
 oarc-buddy-txt-buddy-team=a buddy team
-oarc-buddy-txt-moat= surrounded by a moat 
-oarc-buddy-txt-near=near to the center of the map!
-oarc-buddy-txt-far=far from the center of the map!
-oarc-buddy-txt-would-like= would like to join 
 oarc-buddy-txt-next-to-you= next to you
+oarc-buddy-txt-moat= surrounded by a moat
+oarc-buddy-txt-surface= on __1__
+oarc-buddy-txt-distance= at a distance of __1__ chunks from the center of the map!
+
 
 oarc-buddy-declined=__1__ declined your buddy request!
 
