--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -16,6 +16,7 @@ oarc-join-main-team-radio=Join Main Team (shared research)
 oarc-create-own-team-radio=Create Your Own Team (own research tree)
 
 oarc-moat-option=Surround your spawn with a moat
+oarc-moat-option-tooltip=If you spawn near land, a ring of water will be generated around your spawn area. Depending on the mod options, there may be a small land bridge created as well. If you spawn in water already, this option has no effect.
 
 oarc-solo-spawn=Create Your Own Spawn
 oarc-solo-spawn-tooltip=You will spawn in your own starting area with pre-set starting resources.
@@ -30,10 +31,12 @@ oarc-spawn-menu-shared-header=Join Another Spawn
 oarc-spawn-menu-buddy-header=Create A Buddy Spawn
 
 oarc-spawn-distance-slider-label=Distance From Map Center: 
+oarc-spawn-distance-slider-tooltip=This is the minimum distance from the center of the map in chunks that you will spawn. You may spawn further away if the map has already been explored.
 
 oarc-starting-area-normal=You are spawned in a new area, with pre-set starting resources.
+oarc-join-someone-dropdown-label=Select Shared Spawn:
 oarc-join-someone-avail=Join Someone (__1__ available)
-oarc-join-someone-info=You can join someone else's starting area. This requires at least 1 person to have allowed access to their base. This choice is final and you will not be able to create your own spawn later.
+oarc-join-someone-info=You can request to join someone else's starting area. This requires at least 1 person to have allowed access to their base.
 
 oarc-no-shared-avail=There are currently no shared bases availble to spawn at.
 oarc-join-check-again=Check Again
@@ -45,7 +48,7 @@ oarc-buddy-spawn=Request Buddy Spawn
 oarc-buddy-spawn-disabled=Buddy spawns are disabled in this mode.
 oarc-buddy-spawn-info=The buddy system requires 2 players in this menu at the same time, you spawn beside each other, each with your own resources.
 
-oarc-max-players-shared-spawn=If you create your own spawn point you can allow up to __1__ other online players to join.
+oarc-max-players-shared-spawn=You can allow up to __1__ other players to join you.
 oarc-spawn-dist-notes=Spawn distance is in CHUNKS from the center of the map.\nExpect a fight to reach other players.
 
 oarc-player-is-joining-main-force=__1__ is joining the main force on __2__!
@@ -93,8 +96,9 @@ oarc-player-joining-base=__1__ is joining __2__'s base!
 
 oarc-player-left-while-joining=__1__ left the game. What an ass.
 
+oarc-buddy-select-label=Select Buddy:
 oarc-buddy-spawn-options=Buddy Spawn Options
-oarc-buddy-spawn-instructions=To use this, make sure you and your buddy are in this menu at the same time. Only one of you must send the request. Select your buddy from the list (refresh if your buddy's name is not visible) and select your spawn options. Click one of the request buttons to send the request. The other buddy can then accept (or deny) the request. This will allow you both to spawn next to each other, each with your own spawn area. Once a buddy accepts a spawn request, it is final!
+oarc-buddy-spawn-instructions=You and your buddy must be in this menu at the same time. Only one of you can send the request. Select your your spawn options first, then select your buddy from the list. Click Request Buddy Spawn. The other buddy can then accept (or deny) the request. This will allow you both to spawn next to each other, each with your own spawn area.
 
 oarc-buddy-select-info=First, select a buddy from the waiting list. Then choose the spawn options and send your request:
 
