More gui style and issues cleanup. Changed starting items logic to allow for mods with starting item kits.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -41,7 +41,7 @@ oarc-join-someone-info=You can request to join someone else's starting area. Thi
 oarc-no-shared-avail=There are currently no shared bases availble to spawn at.
 oarc-join-check-again=Check Again
 oarc-shared-spawn-disabled=Shared spawns are disabled in this mode.
-oarc-no-shared-spawn-selected=You have not selected a vlid player to join. Please select one from the list.
+oarc-no-shared-spawn-selected=You have not selected a valid player to join. Please select one from the list.
 oarc-invalid-host-shared-spawn=Selected player is no longer available! Please try again.
 
 oarc-buddy-spawn=Request Buddy Spawn
@@ -89,12 +89,11 @@ oarc-stop-shared-base=New players can no longer join __1__'s base!
 
 oarc-spawn-point-updated=Re-spawn point updated!
 oarc-selected-player-not-wait=Selected player is no longer waiting to join!
+oarc-selected-player-not-valid=Please select a valid player!
 oarc-reject-joiner=You rejected __1__'s request to join your base.
 oarc-your-request-rejected=Your request to join was rejected.
 
 oarc-player-joining-base=__1__ is joining __2__'s base!
-
-oarc-player-left-while-joining=__1__ left the game. What an ass.
 
 oarc-buddy-select-label=Select Buddy:
 oarc-buddy-spawn-options=Buddy Spawn Options
