Saving GUI work for in game settings menu.

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -43,7 +43,7 @@ oarc-mod-server-msg=This is an additional message that will be displayed to play
 
 oarc-mod-enable-main-team=Allow players to join the main team. This is the default team that is created when the game starts.
 oarc-mod-enable-separate-teams=Allow players to start their own teams (CO-OP only, No PVP).\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
-oarc-mod-enable-spawning-on-other-surfaces=Allow spawning on other surfaces.
+oarc-mod-enable-spawning-on-other-surfaces=Allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. You can configure individual surfaces using the in game settings menu as well.
 
 oarc-mod-allow-moats-around-spawns=Allow players to choose spawns with a moat around them.
 oarc-mod-enable-moat-bridging=If the spawn area is surrounded by land, the moat will have a small land bridge connecting it.
@@ -67,5 +67,5 @@ oarc-mod-minimum-online-time=The minimum time a player must be online before the
 oarc-mod-respawn-cooldown-min=The minimum time a player must wait before they can change their spawn point to a new location.
 
 oarc-mod-enable-regrowth=Enables regrowth. This slowly removes inactive chunks over time. Any chunk with player structures will not be removed. This helps to keep the map (and file size) smaller over time.
-oarc-mod-enable-world-eater=Enables world eater. This is requires and is part of regrowth. This slowly checks all chunks for a lack of player structures and entities and marks them for removal. This helps to keep the map (and file size) smaller over time. This is more of an experimental feature, use at your own risk.
+oarc-mod-enable-world-eater=Enables world eater. This requires regrowth. This slowly checks all chunks for a lack of player structures and entities and marks them for removal. This helps to keep the map (and file size) smaller over time. This is more of an experimental feature, use at your own risk.
 oarc-mod-enable-abandoned-base-cleanup=Abandoned bases will be cleaned up if players leave within a short time of joining.
