More settings tab and info tab work done.

--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -5,10 +5,11 @@ oarc-mod=This is a multiplayer mod that allows every player to create their own 
 oarc-mod-welcome-msg-title=Welcome Message Title
 oarc-mod-welcome-msg=Game Welcome Message
 oarc-mod-server-msg=Server Welcome Message
+oarc-mod-discord-invite=Discord Invite
 
 oarc-mod-enable-main-team=Enable main team
 oarc-mod-enable-separate-teams=Enable separate teams
-oarc-mod-enable-spawning-on-other-surfaces=Allow starting on other surfaces
+# oarc-mod-enable-spawning-on-other-surfaces=Allow starting on other surfaces
 
 oarc-mod-allow-moats-around-spawns=Allow moats around spawns
 oarc-mod-enable-moat-bridging=Moat bridges
@@ -40,10 +41,11 @@ oarc-mod-enable-abandoned-base-cleanup=Cleanup abandoned bases
 oarc-mod-welcome-msg-title=This is the title of the welcome message that will be displayed to players when they join the game.
 oarc-mod-welcome-msg=This is the welcome message that will be displayed to players when they join the game.
 oarc-mod-server-msg=This is an additional message that will be displayed to players when they join the game.
+oarc-mod-discord-invite=Place your discord invite here so players can easily copy it from the in game info panel. Leave empty to disable.
 
 oarc-mod-enable-main-team=Allow players to join the main team. This is the default team that is created when the game starts.
 oarc-mod-enable-separate-teams=Allow players to start their own teams (CO-OP only, No PVP).\n[color=red][font=default-bold]You must enable one or both of the main team and separate team options. Otherwise it will default to main team allowed only.[/font][/color]
-oarc-mod-enable-spawning-on-other-surfaces=Allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. You can configure individual surfaces using the in game settings menu as well.
+# oarc-mod-enable-spawning-on-other-surfaces=Allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. You can configure individual surfaces using the in game settings menu as well.
 
 oarc-mod-allow-moats-around-spawns=Allow players to choose spawns with a moat around them.
 oarc-mod-enable-moat-bridging=If the spawn area is surrounded by land, the moat will have a small land bridge connecting it.
@@ -62,7 +64,7 @@ oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chest
 oarc-mod-main-force-name=The name of the main force. This is the default team that is created when the game starts.
 oarc-mod-default-surface=The default surface that players will spawn on if they join the main team or if spawning on other surfaces is not enabled.
 oarc-mod-scale-resources-around-spawns=This scales resources around every spawn area so far away spawns aren't immediately next to very rich deposits.
-oarc-mod-modified-enemy-spawning=This scales the enemy spawning around every spawn area so far away spawns aren't next to very dangerous enemies.
+oarc-mod-modified-enemy-spawning=This scales the enemy spawning globally based on the allowed spawn distances to avoid every spawn being surrounded by behemoth worms.
 oarc-mod-minimum-online-time=The minimum time a player must be online before they leave, otherwise their spawn area will be cleaned up.
 oarc-mod-respawn-cooldown-min=The minimum time a player must wait before they can change their spawn point to a new location.
 
