--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -2,7 +2,7 @@ scenario-name=OARC
 
 description=This mod provides a scenario that overhauls multiplayer spawning.\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]
 
-oarc-scenario-warning-msg=This scenario allows players to create their own spawn points far from the center of the map. For more information, click the INFO button in the top left corner.
+oarc-scenario-info-warn-msg=This scenario allows players to create their own spawn points far from the center of the map. For more information, click the INFO button in the top left corner.
 
 oarc-i-understand=I Understand
 oarc-spawn-options=Spawn Options
@@ -136,6 +136,25 @@ oarc-spawn-wait=Please wait!
 oarc-wait-text=Your spawn is being created now.\nYou will be teleported there in __1__ seconds!\nPlease standby...
 
 oarc-settings-tab-title=Mod Settings
-oarc-settings-tab-admin-warning=You are an admin. You may change any of these settings. BE CAREFUL!
+oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues! BE CAREFUL!
+oarc-settings-tab-player-warning=You are not an admin. These settings are read-only for you.
 
 oarc-settings-tab-title-surface=Surface Settings
+
+
+oarc-mod-faq-what-is-this-mod=What is this mod?
+oarc-mod-faq-what-is-this-mod-answer=This mod overhauls multiplayer spawning. Players can create their own spawn points away from the center of the map. Players can also join other players' bases, or create buddy spawns. The mod does not change the core gameplay of Factorio, but it does change the way players start the game. The starting area is a preset area with resources, not a "natural" spawn point.
+oarc-mod-faq-other-surfaces=Can I start on a different surface/planet?
+oarc-mod-faq-other-surfaces-answer=[color=red]This feature is currently a work in progress. As such, only spawning on "nauvis" or a default nauvis-like surface will work correctly. Spawning on other surfaces may cause issues.[/color]
+oarc-mod-faq-what-are-teams=What are the different team options?
+oarc-mod-faq-what-are-teams-answer=I wrote this mod for co-op play only, not pvp. Depending on the mod settings, you can either join the main team, which shares research, or create your own team, which has its own research tree. All teams/forces are friendly to each other and can communicate in chat and (optionally) share map vision. The only reason to create your own team is if you want to have your own research progress.
+oarc-mod-faq-shared-spawn=What is a shared spawn?
+oarc-mod-faq-shared-spawn-answer=Players can choose to allow other players to join their base. This allows new players to spawn in the same starting area as the host player. The host player can control who can join their base.
+oarc-mod-faq-buddy-spawn=What is a buddy spawn?
+oarc-mod-faq-buddy-spawn-answer=If you and another player are in the spawn menu at the same time, you can request a buddy spawn. This will spawn you and your buddy right next to each other on the map, each with your own starting area.
+oarc-mod-faq-regrowth=What are the regrowth and world eater features?
+oarc-mod-faq-regrowth-answer="Regrowth" helps keep the save file size down by removing inactive map chunks over time. This is useful for long-running servers with many players. No chunks with player activity will be removed. "World Eater" slowly checks every chunk to see if there are any player structures in it. This is an additional check on top of the regrowth feature that will catch any chunks that players built on, but then later removed all structures from.
+oarc-mod-faq-cleanup-abandoned=What is the cleanup abandoned bases feature?
+oarc-mod-faq-cleanup-abandoned-answer=This removes the spawn area if the player leaves within the "minimum online time" and will also delete their character. This feature is useful for keeping the map clean and the save file size down. Public servers likely want to enable this feature.
+oarc-mod-faq-offline-protection=What is the offline protection feature?
+oarc-mod-faq-offline-protection-answer=If a base has all players offline, it will be protected from enemy attacks. This is not 100% guaranteed, but it will help prevent the base from being destroyed while players are offline.
