Improved mod settings custom GUI with proper input validation.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -138,6 +138,8 @@ oarc-wait-text=Your spawn is being created now.\nYou will be teleported there in
 oarc-settings-tab-title=Mod Settings
 oarc-settings-tab-admin-warning=You are an admin. Changing these settings late in the game may cause issues! BE CAREFUL!
 oarc-settings-tab-player-warning=You are not an admin. These settings are read-only for you.
+oarc-settings-tab-description=This tab contains additional settings that are not available in the mod settings menu.
+oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
 
 oarc-settings-tab-title-surface=Surface Settings
 
